// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error 1`] = `null`;

exports[`2. a full article with an image as the lead asset 1`] = `
<article>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <header>
      <div>
        <div>
          <div>
            <div>
              SOME LABEL
            </div>
          </div>
          <h1
            aria-level="1"
            role="heading"
          >
            Some Headline
          </h1>
          <h2
            aria-level="2"
            role="heading"
          >
            Some Standfirst
          </h2>
          <div>
            <div>
              <NewArticleFlag />
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <span>
              <ArticleBylineWithLinks
                ast={
                  Array [
                    Object {
                      "attributes": Object {},
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "Some byline",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "inline",
                    },
                  ]
                }
                color="#333333"
              />
            </span>
          </div>
          <div>
            <span>
              <DatePublication
                date="2015-03-13T18:54:58.000Z"
                publication="TIMES"
              />
            </span>
          </div>
        </div>
        <div>
          <nav>
            <ArticleTopics
              topics={
                Array [
                  Object {
                    "name": "Topic",
                    "slug": "topic",
                  },
                ]
              }
            />
          </nav>
        </div>
      </div>
      <div>
        <div>
          <figure>
            <div>
              <div>
                <Image
                  uri="https://crop169.io"
                />
              </div>
            </div>
            <div>
              <figcaption>
                <Caption
                  credits="Some Credits"
                  text="Some Caption"
                />
              </figcaption>
            </div>
          </figure>
        </div>
      </div>
    </header>
    <div>
      <div>
        <ArticleImage
          captionOptions={
            Object {
              "caption": "An image caption",
              "credits": "The image credits",
            }
          }
          imageOptions={
            Object {
              "display": "primary",
              "ratio": "1500:1000",
              "uri": "https://image.io",
            }
          }
        />
      </div>
      <Link
        index="link-1"
        target="_blank"
        url="https://link.io"
      >
        Some Link
      </Link>
      <div>
        <p>
          Some content
        </p>
      </div>
      <div>
        <div>
          <PullQuote
            caption="AName"
            content="A pull quote"
            twitter="@AName"
          />
        </div>
      </div>
      <div>
        <figure>
          <div>
            <div>
              <div>
                <video
                  controls={true}
                  data-account="57838016001"
                  data-application-id={true}
                  data-embed="default"
                  data-player="default"
                  data-video-id="4084164751001"
                  id="4084164751001-57838016001-1"
                  poster="https://image.io"
                />
              </div>
            </div>
          </div>
          <figcaption>
            <div>
              <Caption
                text="This is video caption"
              />
            </div>
          </figcaption>
        </figure>
      </div>
    </div>
  </div>
  <div>
    <nav>
      <ArticleTopics
        topics={
          Array [
            Object {
              "name": "Topic",
              "slug": "topic",
            },
          ]
        }
      />
    </nav>
  </div>
  <aside>
    <RelatedArticles
      slice={
        Object {
          "items": Array [
            Object {
              "article": Object {
                "__typename": "Article",
                "byline": Array [],
                "headline": "RA Headline",
                "id": "ra-1",
                "label": "RA Label",
                "leadAsset": Object {
                  "__typename": "Image",
                  "crop169": Object {
                    "__typename": "Crop",
                    "url": "https://racrop169.io",
                  },
                  "crop32": Object {
                    "__typename": "Crop",
                    "url": "https://racrop32.io",
                  },
                  "title": "RA Title",
                },
                "publicationName": "TIMES",
                "publishedTime": "2015-03-23T19:39:39.000Z",
                "shortHeadline": "Headline",
                "summary105": Array [],
                "summary125": Array [],
                "summary145": Array [],
                "summary160": Array [],
                "summary175": Array [],
                "summary225": Array [],
                "url": "https://ra.io",
              },
            },
          ],
          "sliceName": "StandardSlice",
        }
      }
    />
  </aside>
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixel"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixelteads"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixelskin"
  />
</article>
`;

exports[`3. an article with a video as the lead asset 1`] = `
<article>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <header>
      <div>
        <div>
          <div>
            <VideoLabel
              color="#333333"
              title={null}
            />
          </div>
          <h1
            aria-level="1"
            role="heading"
          >
            Some Headline
          </h1>
        </div>
      </div>
      <div>
        <div>
          <div>
            <span>
              <DatePublication
                date="2015-03-13T18:54:58.000Z"
                publication="TIMES"
              />
            </span>
          </div>
        </div>
      </div>
      <div>
        <div>
          <figure>
            <div>
              <div>
                <div>
                  <video
                    controls={true}
                    data-account="57838016001"
                    data-application-id={true}
                    data-embed="default"
                    data-player="default"
                    data-video-id="4084164751001"
                    id="4084164751001-57838016001-2"
                    poster="https://video.io"
                  />
                </div>
              </div>
            </div>
            <div>
              <figcaption>
                <Caption
                  text="This is video caption"
                />
              </figcaption>
            </div>
          </figure>
        </div>
      </div>
    </header>
    <div>
      <div>
        <p>
          Some content
        </p>
      </div>
    </div>
  </div>
  <aside />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixel"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixelteads"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixelskin"
  />
</article>
`;

exports[`4. an article with no lead asset 1`] = `
<article>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <header>
      <div>
        <div>
          <h1
            aria-level="1"
            role="heading"
          >
            Some Headline
          </h1>
        </div>
      </div>
      <div>
        <div>
          <div>
            <span>
              <DatePublication
                date="2015-03-13T18:54:58.000Z"
                publication="TIMES"
              />
            </span>
          </div>
        </div>
      </div>
      <div />
    </header>
    <div>
      <div>
        <p>
          Some content
        </p>
      </div>
    </div>
  </div>
  <aside />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixel"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixelteads"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixelskin"
  />
</article>
`;

exports[`5. an article with ads 1`] = `
<article>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <header>
      <div>
        <div>
          <h1
            aria-level="1"
            role="heading"
          >
            Some Headline
          </h1>
        </div>
      </div>
      <div>
        <div>
          <div>
            <span>
              <DatePublication
                date="2015-03-13T18:54:58.000Z"
                publication="TIMES"
              />
            </span>
          </div>
        </div>
      </div>
      <div />
    </header>
    <div>
      <Ad
        contextUrl="https://url.io"
        section="Some Section"
        slotName="inline-ad"
      />
    </div>
  </div>
  <aside />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixel"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixelteads"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixelskin"
  />
</article>
`;

exports[`6. an article loading state 1`] = `
<div>
  Loading ...
</div>
`;

exports[`7. an article with updated byline 1`] = `
<article>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <header>
      <div>
        <div>
          <h1
            aria-level="1"
            role="heading"
          >
            Some Headline
          </h1>
        </div>
      </div>
      <div>
        <div>
          <div>
            <span>
              <DatePublication
                date="2015-03-13T18:54:58.000Z"
                publication="TIMES"
              />
            </span>
          </div>
        </div>
      </div>
      <div />
    </header>
    <div>
      <div>
        <p>
          Some content
        </p>
      </div>
    </div>
  </div>
  <aside />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixel"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixelteads"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixelskin"
  />
</article>
`;

exports[`7. an article with updated byline 2`] = `
<article>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <header>
      <div>
        <div>
          <h1
            aria-level="1"
            role="heading"
          >
            Some Headline
          </h1>
        </div>
      </div>
      <div>
        <div>
          <div>
            <span>
              <ArticleBylineWithLinks
                ast={
                  Array [
                    Object {
                      "attributes": Object {},
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "Some byline",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "inline",
                    },
                  ]
                }
                color="#FFFFFF"
              />
            </span>
          </div>
          <div>
            <span>
              <DatePublication
                date="2015-03-13T18:54:58.000Z"
                publication="TIMES"
              />
            </span>
          </div>
        </div>
      </div>
      <div />
    </header>
    <div>
      <div>
        <p>
          Some content
        </p>
      </div>
    </div>
  </div>
  <aside />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixel"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixelteads"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixelskin"
  />
</article>
`;
